contact lang fix + split-section mobile fix

--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -198,14 +198,13 @@
 
 @media (max-width: 768px) {
   .split-section {
-    flex-direction: row;
-    flex-wrap: wrap-reverse;
+    flex-wrap: wrap;
     height: auto;
   }
 
   .half {
     width: 50%;
-    height: 40vh;
+    height: auto;
     background-size: contain;
   }
 
